Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8992

MariaDB crashes when accessing table with GIS features

    XMLWordPrintable

Details

    • 10.1.9-1

    Description

      After upgrading server from MariaDB 1.0.21 to 10.1.8, mysqld crashes when using a table that uses GIS features. As a result, it is not even possible to run mysql_upgrade. Because of the repeated crashing, the server becomes unusable for production purposes.

      Selecting data from the affected tables is possible though, but operations such as 'show create table', 'show table status' or even 'use <database>' cause mysqld to restart.

      Interestingly, after issuing the 'describe' command on a table, it is sometimes possible to (temporarily) perform these functions on that particular table without crashing mysqld.

      After creating a new table using an identical table definition, followed by copying the new .frm file over the old .frm file, the table works smoothly.

      This bug is similar (though in my opinion not identical) to bug MDEV-8163.

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              wvp Willem van Pelt
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: