MDEV-8992 MariaDB crashes when accessing table with GIS features.         we don't test for not-existing gis extra in FRM.